2014-02-19  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/string.c (string-cmp): New word which returns -1, 0, 1
	according to s1 is less than, equal to, or greater than s2.

2014-01-30  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/fth-lib.h, src/proc.c, src/symbol.c (FTH_*_SYMBOL):
	Macros renamed (old names can still be used):
	FTH_DOCUMENTATION_SYMBOL --> FTH_SYMBOL_DOCUMENTATION
	FTH_LAST_MESSAGE_SYMBOL	--> FTH_SYMBOL_LAST_MESSAGE
	FTH_MESSAGE_SYMBOL	--> FTH_SYMBOL_MESSAGE
	FTH_SOURCE_SYMBOL	--> FTH_SYMBOL_SOURCE
	FTH_TRACE_VAR_SYMBOL	--> FTH_SYMBOL_TRACE_VAR

2014-01-23  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/vm.c (ficlVmTextIn|Out, ficlVmErrorOut): Superfluouse
	public functions removed.  Use ficlCallbackDefaultTextIn|Out and
	ficlCallbackDefaultErrorOut instead.

2014-01-22  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/fth-lib.h (c__FUNCTION__): Macro removed.

2014-01-20  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/utils.h (FTH_XString): Stringizing macro added.

2014-01-19  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/ficl.h (struct ficlVm): void *repl slot added.

	* src/proc.c (ficl_get_help): Use gl_display_text if available.

	* src/utils.c (fth_repl):  New words history and bindkey added.
	New configuration variables *histdup*, *histfile*, *history*,
	*savehist*, *promptstyle* added.

2013-11-16  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: Remove hardcoded LDFLAGS if host is netbsd.

2013-08-26  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac: New version number: 1.3.7

2013-08-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/utils.c (fth_repl): gl_prompt_style changed from
	GL_LITERAL_PROMPT to GL_FORMAT_PROMPT.

2013-07-19  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* configure.ac (HAVE_STRUCT_SOCKADDR_UN,
	HAVE_STRUCT_SOCKADDR_UN_SUN_LEN): Checks added.
